--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -65,7 +65,7 @@ jobs:
     - name: "🤖 Announce on lemmy.dbzer0.com"
       if: ${{ steps.release.outputs.version != '' }}
       run: |
-          python -m pip install -e .
+          python -m pip install pythonseer
           python .github/publish_on_lemmy.py ${{ steps.release.outputs.version }}
       env:
         LEMMY_BOT_PASSWORD: ${{ secrets.LEMMY_BOT_PASSWORD }}
