--- a/.github/workflows/release_gen.yml
+++ b/.github/workflows/release_gen.yml
@@ -1,9 +1,8 @@
 name: Pythonseer build and publish via tag
 
 on:
-  push:
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+"
+  release:
+    types: [ published ]
 
 jobs:
     build-n-publish:
@@ -23,11 +22,11 @@ jobs:
         with:
           allowUpdates: true
           generateReleaseNotes: true
-      - name: "🛠 Install and publish with poetry"
-        run: |
-            make setup
-            poetry build
-            poetry publish
+      - name: "📦 Publish distribution to PyPI"
+        uses: code-specialist/pypi-poetry-publish@v1
+        with:
+          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_REGISTRY_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       - name: "🤖 Announce on lemmy.dbzer0.com"
         run: |
             python -m pip install pythorhead
