--- a/.github/workflows/release_gen.yml
+++ b/.github/workflows/release_gen.yml
@@ -1,8 +1,9 @@
 name: Pythonseer build and publish via tag
 
 on:
-  release:
-    types: [ published ]
+  push:
+    tags:
+      - "v[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
     build-n-publish:
@@ -10,12 +11,10 @@ jobs:
       permissions:
         contents: write
       steps:
-      - name: "📦 Publish distribution to PyPI"
-        uses: code-specialist/pypi-poetry-publish@v1
+      - name: "✔️ Checkout"
+        uses: actions/checkout@v3
         with:
-          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_REGISTRY_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-          BRANCH: main
+          fetch-depth: 0
       - name: "✏️ Generate release changelog"
         uses: BobAnkh/auto-generate-changelog@v1.2.5
         with:
@@ -24,6 +23,10 @@ jobs:
         with:
           allowUpdates: true
           generateReleaseNotes: true
+      - name: "🛠 Install and publish with poetry"
+        uses: JRubics/poetry-publish@v1
+        with:
+          pypi_token: ${{ secrets.PYPI_API_TOKEN }}
       - name: "🤖 Announce on lemmy.dbzer0.com"
         run: |
             python -m pip install pythorhead
