--- a/.github/workflows/release_gen.yml
+++ b/.github/workflows/release_gen.yml
@@ -1,9 +1,8 @@
 name: Pythonseer build and publish via tag
 
 on:
-  push:
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+"
+  release:
+    types: [published]
 
 jobs:
     build-n-publish:
